library/src/libqaccessible.h

typedef QAccessible::State QAccessible__State;
typedef struct QAccessibleActionInterface QAccessibleActionInterface;
typedef struct QAccessibleEditableTextInterface QAccessibleEditableTextInterface;
typedef struct QAccessibleHyperlinkInterface QAccessibleHyperlinkInterface;
typedef struct QAccessibleImageInterface QAccessibleImageInterface;
typedef struct QAccessibleInterface QAccessibleInterface;
typedef struct QAccessibleTableCellInterface QAccessibleTableCellInterface;
typedef struct QAccessibleTableInterface QAccessibleTableInterface;
typedef struct QAccessibleTextInterface QAccessibleTextInterface;
typedef struct QAccessibleValueInterface QAccessibleValueInterface;
typedef struct QAccessible__State QAccessible__State;
typedef struct QColor QColor;
typedef struct QObject QObject;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QVariant QVariant;
typedef struct QWindow QWindow;
QTLIBC_API bool QAccessibleInterface_IsValid(const QAccessibleInterface* self);
QTLIBC_API QObject* QAccessibleInterface_Object(const QAccessibleInterface* self);
QTLIBC_API QWindow* QAccessibleInterface_Window(const QAccessibleInterface* self);
QTLIBC_API libqt_list /* of libqt_pair  tuple of QAccessibleInterface* and int  */ QAccessibleInterface_Relations(const QAccessibleInterface* self, int match);
QTLIBC_API QAccessibleInterface* QAccessibleInterface_FocusChild(const QAccessibleInterface* self);
QTLIBC_API QAccessibleInterface* QAccessibleInterface_ChildAt(const QAccessibleInterface* self, int x, int y);
QTLIBC_API QAccessibleInterface* QAccessibleInterface_Parent(const QAccessibleInterface* self);
QTLIBC_API QAccessibleInterface* QAccessibleInterface_Child(const QAccessibleInterface* self, int index);
QTLIBC_API int QAccessibleInterface_ChildCount(const QAccessibleInterface* self);
QTLIBC_API int QAccessibleInterface_IndexOfChild(const QAccessibleInterface* self, QAccessibleInterface* param1);
QTLIBC_API libqt_string QAccessibleInterface_Text(const QAccessibleInterface* self, int t);
QTLIBC_API void QAccessibleInterface_SetText(QAccessibleInterface* self, int t, libqt_string text);
QTLIBC_API QRect* QAccessibleInterface_Rect(const QAccessibleInterface* self);
QTLIBC_API int QAccessibleInterface_Role(const QAccessibleInterface* self);
QTLIBC_API QAccessible__State* QAccessibleInterface_State(const QAccessibleInterface* self);
QTLIBC_API QColor* QAccessibleInterface_ForegroundColor(const QAccessibleInterface* self);
QTLIBC_API QColor* QAccessibleInterface_BackgroundColor(const QAccessibleInterface* self);
QTLIBC_API QAccessibleTextInterface* QAccessibleInterface_TextInterface(QAccessibleInterface* self);
QTLIBC_API QAccessibleEditableTextInterface* QAccessibleInterface_EditableTextInterface(QAccessibleInterface* self);
QTLIBC_API QAccessibleValueInterface* QAccessibleInterface_ValueInterface(QAccessibleInterface* self);
QTLIBC_API QAccessibleActionInterface* QAccessibleInterface_ActionInterface(QAccessibleInterface* self);
QTLIBC_API QAccessibleImageInterface* QAccessibleInterface_ImageInterface(QAccessibleInterface* self);
QTLIBC_API QAccessibleTableInterface* QAccessibleInterface_TableInterface(QAccessibleInterface* self);
QTLIBC_API QAccessibleTableCellInterface* QAccessibleInterface_TableCellInterface(QAccessibleInterface* self);
QTLIBC_API QAccessibleHyperlinkInterface* QAccessibleInterface_HyperlinkInterface(QAccessibleInterface* self);
QTLIBC_API void QAccessibleInterface_VirtualHook(QAccessibleInterface* self, int id, void* data);
QTLIBC_API void* QAccessibleInterface_InterfaceCast(QAccessibleInterface* self, int param1);
QTLIBC_API void QAccessibleTextInterface_Selection(const QAccessibleTextInterface* self, int selectionIndex, int* startOffset, int* endOffset);
QTLIBC_API int QAccessibleTextInterface_SelectionCount(const QAccessibleTextInterface* self);
QTLIBC_API void QAccessibleTextInterface_AddSelection(QAccessibleTextInterface* self, int startOffset, int endOffset);
QTLIBC_API void QAccessibleTextInterface_RemoveSelection(QAccessibleTextInterface* self, int selectionIndex);
QTLIBC_API void QAccessibleTextInterface_SetSelection(QAccessibleTextInterface* self, int selectionIndex, int startOffset, int endOffset);
QTLIBC_API int QAccessibleTextInterface_CursorPosition(const QAccessibleTextInterface* self);
QTLIBC_API void QAccessibleTextInterface_SetCursorPosition(QAccessibleTextInterface* self, int position);
QTLIBC_API libqt_string QAccessibleTextInterface_Text(const QAccessibleTextInterface* self, int startOffset, int endOffset);
QTLIBC_API libqt_string QAccessibleTextInterface_TextBeforeOffset(const QAccessibleTextInterface* self, int offset, int boundaryType, int* startOffset, int* endOffset);
QTLIBC_API libqt_string QAccessibleTextInterface_TextAfterOffset(const QAccessibleTextInterface* self, int offset, int boundaryType, int* startOffset, int* endOffset);
QTLIBC_API libqt_string QAccessibleTextInterface_TextAtOffset(const QAccessibleTextInterface* self, int offset, int boundaryType, int* startOffset, int* endOffset);
QTLIBC_API int QAccessibleTextInterface_CharacterCount(const QAccessibleTextInterface* self);
QTLIBC_API QRect* QAccessibleTextInterface_CharacterRect(const QAccessibleTextInterface* self, int offset);
QTLIBC_API int QAccessibleTextInterface_OffsetAtPoint(const QAccessibleTextInterface* self, QPoint* point);
QTLIBC_API void QAccessibleTextInterface_ScrollToSubstring(QAccessibleTextInterface* self, int startIndex, int endIndex);
QTLIBC_API libqt_string QAccessibleTextInterface_Attributes(const QAccessibleTextInterface* self, int offset, int* startOffset, int* endOffset);
QTLIBC_API void QAccessibleTextInterface_OperatorAssign(QAccessibleTextInterface* self, QAccessibleTextInterface* param1);
QTLIBC_API void QAccessibleEditableTextInterface_DeleteText(QAccessibleEditableTextInterface* self, int startOffset, int endOffset);
QTLIBC_API void QAccessibleEditableTextInterface_InsertText(QAccessibleEditableTextInterface* self, int offset, libqt_string text);
QTLIBC_API void QAccessibleEditableTextInterface_ReplaceText(QAccessibleEditableTextInterface* self, int startOffset, int endOffset, libqt_string text);
QTLIBC_API void QAccessibleEditableTextInterface_OperatorAssign(QAccessibleEditableTextInterface* self, QAccessibleEditableTextInterface* param1);
QTLIBC_API QVariant* QAccessibleValueInterface_CurrentValue(const QAccessibleValueInterface* self);
QTLIBC_API void QAccessibleValueInterface_SetCurrentValue(QAccessibleValueInterface* self, QVariant* value);
QTLIBC_API QVariant* QAccessibleValueInterface_MaximumValue(const QAccessibleValueInterface* self);
QTLIBC_API QVariant* QAccessibleValueInterface_MinimumValue(const QAccessibleValueInterface* self);
QTLIBC_API QVariant* QAccessibleValueInterface_MinimumStepSize(const QAccessibleValueInterface* self);
QTLIBC_API void QAccessibleValueInterface_OperatorAssign(QAccessibleValueInterface* self, QAccessibleValueInterface* param1);
QTLIBC_API bool QAccessibleTableCellInterface_IsSelected(const QAccessibleTableCellInterface* self);
QTLIBC_API libqt_list /* of QAccessibleInterface* */ QAccessibleTableCellInterface_ColumnHeaderCells(const QAccessibleTableCellInterface* self);
QTLIBC_API libqt_list /* of QAccessibleInterface* */ QAccessibleTableCellInterface_RowHeaderCells(const QAccessibleTableCellInterface* self);
QTLIBC_API int QAccessibleTableCellInterface_ColumnIndex(const QAccessibleTableCellInterface* self);
QTLIBC_API int QAccessibleTableCellInterface_RowIndex(const QAccessibleTableCellInterface* self);
QTLIBC_API int QAccessibleTableCellInterface_ColumnExtent(const QAccessibleTableCellInterface* self);
QTLIBC_API int QAccessibleTableCellInterface_RowExtent(const QAccessibleTableCellInterface* self);
QTLIBC_API QAccessibleInterface* QAccessibleTableCellInterface_Table(const QAccessibleTableCellInterface* self);
QTLIBC_API void QAccessibleTableCellInterface_OperatorAssign(QAccessibleTableCellInterface* self, QAccessibleTableCellInterface* param1);