src/qt/libqaccessible.bf

using System;
using System.Interop;
namespace Qt;

[AllowDuplicates]
public enum QAccessibleTableModelChangeEvent__ModelChangeType
{
	ModelReset = 0,
	DataChanged = 1,
	RowsInserted = 2,
	ColumnsInserted = 3,
	RowsRemoved = 4,
	ColumnsRemoved = 5,
}
public struct QAccessibleInterface
{
	[LinkName("QAccessibleInterface_IsValid")]
	public static extern bool QAccessibleInterface_IsValid(Self* c_this);
	[LinkName("QAccessibleInterface_Object")]
	public static extern QObject* QAccessibleInterface_Object(Self* c_this);
	[LinkName("QAccessibleInterface_Window")]
	public static extern QWindow* QAccessibleInterface_Window(Self* c_this);
	[LinkName("QAccessibleInterface_Relations")]
	public static extern void*[] QAccessibleInterface_Relations(Self* c_this, int64 match);
	[LinkName("QAccessibleInterface_FocusChild")]
	public static extern QAccessibleInterface* QAccessibleInterface_FocusChild(Self* c_this);
	[LinkName("QAccessibleInterface_ChildAt")]
	public static extern QAccessibleInterface* QAccessibleInterface_ChildAt(Self* c_this, int32 x, int32 y);
	[LinkName("QAccessibleInterface_Parent")]
	public static extern QAccessibleInterface* QAccessibleInterface_Parent(Self* c_this);
	[LinkName("QAccessibleInterface_Child")]
	public static extern QAccessibleInterface* QAccessibleInterface_Child(Self* c_this, int32 index);
	[LinkName("QAccessibleInterface_ChildCount")]
	public static extern int32 QAccessibleInterface_ChildCount(Self* c_this);
	[LinkName("QAccessibleInterface_IndexOfChild")]
	public static extern int32 QAccessibleInterface_IndexOfChild(Self* c_this, QAccessibleInterface* param1);
	[LinkName("QAccessibleInterface_Text")]
	public static extern libqt_string QAccessibleInterface_Text(Self* c_this, int64 t);
	[LinkName("QAccessibleInterface_SetText")]
	public static extern void QAccessibleInterface_SetText(Self* c_this, int64 t, libqt_string text);
	[LinkName("QAccessibleInterface_Rect")]
	public static extern QRect QAccessibleInterface_Rect(Self* c_this);
	[LinkName("QAccessibleInterface_Role")]
	public static extern int64 QAccessibleInterface_Role(Self* c_this);
	[LinkName("QAccessibleInterface_State")]
	public static extern QAccessible__State QAccessibleInterface_State(Self* c_this);
	[LinkName("QAccessibleInterface_ForegroundColor")]
	public static extern QColor QAccessibleInterface_ForegroundColor(Self* c_this);
	[LinkName("QAccessibleInterface_BackgroundColor")]
	public static extern QColor QAccessibleInterface_BackgroundColor(Self* c_this);
	[LinkName("QAccessibleInterface_TextInterface")]
	public static extern QAccessibleTextInterface* QAccessibleInterface_TextInterface(Self* c_this);
	[LinkName("QAccessibleInterface_EditableTextInterface")]
	public static extern QAccessibleEditableTextInterface* QAccessibleInterface_EditableTextInterface(Self* c_this);
	[LinkName("QAccessibleInterface_ValueInterface")]
	public static extern QAccessibleValueInterface* QAccessibleInterface_ValueInterface(Self* c_this);
	[LinkName("QAccessibleInterface_ActionInterface")]
	public static extern QAccessibleActionInterface* QAccessibleInterface_ActionInterface(Self* c_this);
	[LinkName("QAccessibleInterface_ImageInterface")]
	public static extern QAccessibleImageInterface* QAccessibleInterface_ImageInterface(Self* c_this);
	[LinkName("QAccessibleInterface_TableInterface")]
	public static extern QAccessibleTableInterface* QAccessibleInterface_TableInterface(Self* c_this);
	[LinkName("QAccessibleInterface_TableCellInterface")]
	public static extern QAccessibleTableCellInterface* QAccessibleInterface_TableCellInterface(Self* c_this);
	[LinkName("QAccessibleInterface_HyperlinkInterface")]
	public static extern QAccessibleHyperlinkInterface* QAccessibleInterface_HyperlinkInterface(Self* c_this);
	[LinkName("QAccessibleInterface_VirtualHook")]
	public static extern void QAccessibleInterface_VirtualHook(Self* c_this, int32 id, void* data);
	[LinkName("QAccessibleInterface_InterfaceCast")]
	public static extern void* QAccessibleInterface_InterfaceCast(Self* c_this, int64 param1);
	[LinkName("QAccessibleInterface_OperatorAssign")]
	public static extern void QAccessibleInterface_OperatorAssign(Self* c_this, QAccessibleInterface* param1);
}
public struct QAccessibleTextInterface
{
	[LinkName("QAccessibleTextInterface_Selection")]
	public static extern void QAccessibleTextInterface_Selection(Self* c_this, int32 selectionIndex, int32* startOffset, int32* endOffset);
	[LinkName("QAccessibleTextInterface_SelectionCount")]
	public static extern int32 QAccessibleTextInterface_SelectionCount(Self* c_this);
	[LinkName("QAccessibleTextInterface_AddSelection")]
	public static extern void QAccessibleTextInterface_AddSelection(Self* c_this, int32 startOffset, int32 endOffset);
	[LinkName("QAccessibleTextInterface_RemoveSelection")]
	public static extern void QAccessibleTextInterface_RemoveSelection(Self* c_this, int32 selectionIndex);
	[LinkName("QAccessibleTextInterface_SetSelection")]
	public static extern void QAccessibleTextInterface_SetSelection(Self* c_this, int32 selectionIndex, int32 startOffset, int32 endOffset);
	[LinkName("QAccessibleTextInterface_CursorPosition")]
	public static extern int32 QAccessibleTextInterface_CursorPosition(Self* c_this);
	[LinkName("QAccessibleTextInterface_SetCursorPosition")]
	public static extern void QAccessibleTextInterface_SetCursorPosition(Self* c_this, int32 position);
	[LinkName("QAccessibleTextInterface_Text")]
	public static extern libqt_string QAccessibleTextInterface_Text(Self* c_this, int32 startOffset, int32 endOffset);
	[LinkName("QAccessibleTextInterface_TextBeforeOffset")]
	public static extern libqt_string QAccessibleTextInterface_TextBeforeOffset(Self* c_this, int32 offset, int64 boundaryType, int32* startOffset, int32* endOffset);
	[LinkName("QAccessibleTextInterface_TextAfterOffset")]
	public static extern libqt_string QAccessibleTextInterface_TextAfterOffset(Self* c_this, int32 offset, int64 boundaryType, int32* startOffset, int32* endOffset);
	[LinkName("QAccessibleTextInterface_TextAtOffset")]
	public static extern libqt_string QAccessibleTextInterface_TextAtOffset(Self* c_this, int32 offset, int64 boundaryType, int32* startOffset, int32* endOffset);
	[LinkName("QAccessibleTextInterface_CharacterCount")]
	public static extern int32 QAccessibleTextInterface_CharacterCount(Self* c_this);
	[LinkName("QAccessibleTextInterface_CharacterRect")]
	public static extern QRect QAccessibleTextInterface_CharacterRect(Self* c_this, int32 offset);
	[LinkName("QAccessibleTextInterface_OffsetAtPoint")]
	public static extern int32 QAccessibleTextInterface_OffsetAtPoint(Self* c_this, QPoint* point);
	[LinkName("QAccessibleTextInterface_ScrollToSubstring")]
	public static extern void QAccessibleTextInterface_ScrollToSubstring(Self* c_this, int32 startIndex, int32 endIndex);
	[LinkName("QAccessibleTextInterface_Attributes")]
	public static extern libqt_string QAccessibleTextInterface_Attributes(Self* c_this, int32 offset, int32* startOffset, int32* endOffset);
	[LinkName("QAccessibleTextInterface_OperatorAssign")]
	public static extern void QAccessibleTextInterface_OperatorAssign(Self* c_this, QAccessibleTextInterface* param1);
}
public struct QAccessibleEditableTextInterface
{
	[LinkName("QAccessibleEditableTextInterface_DeleteText")]
	public static extern void QAccessibleEditableTextInterface_DeleteText(Self* c_this, int32 startOffset, int32 endOffset);
	[LinkName("QAccessibleEditableTextInterface_InsertText")]
	public static extern void QAccessibleEditableTextInterface_InsertText(Self* c_this, int32 offset, libqt_string text);
	[LinkName("QAccessibleEditableTextInterface_ReplaceText")]
	public static extern void QAccessibleEditableTextInterface_ReplaceText(Self* c_this, int32 startOffset, int32 endOffset, libqt_string text);
	[LinkName("QAccessibleEditableTextInterface_OperatorAssign")]
	public static extern void QAccessibleEditableTextInterface_OperatorAssign(Self* c_this, QAccessibleEditableTextInterface* param1);
}
public struct QAccessibleValueInterface
{
	[LinkName("QAccessibleValueInterface_CurrentValue")]
	public static extern QVariant QAccessibleValueInterface_CurrentValue(Self* c_this);
	[LinkName("QAccessibleValueInterface_SetCurrentValue")]
	public static extern void QAccessibleValueInterface_SetCurrentValue(Self* c_this, QVariant* value);
	[LinkName("QAccessibleValueInterface_MaximumValue")]
	public static extern QVariant QAccessibleValueInterface_MaximumValue(Self* c_this);
	[LinkName("QAccessibleValueInterface_MinimumValue")]
	public static extern QVariant QAccessibleValueInterface_MinimumValue(Self* c_this);
	[LinkName("QAccessibleValueInterface_MinimumStepSize")]
	public static extern QVariant QAccessibleValueInterface_MinimumStepSize(Self* c_this);
	[LinkName("QAccessibleValueInterface_OperatorAssign")]
	public static extern void QAccessibleValueInterface_OperatorAssign(Self* c_this, QAccessibleValueInterface* param1);
}
public struct QAccessibleTableCellInterface
{
	[LinkName("QAccessibleTableCellInterface_IsSelected")]
	public static extern bool QAccessibleTableCellInterface_IsSelected(Self* c_this);
	[LinkName("QAccessibleTableCellInterface_ColumnHeaderCells")]
	public static extern QAccessibleInterface*[] QAccessibleTableCellInterface_ColumnHeaderCells(Self* c_this);
	[LinkName("QAccessibleTableCellInterface_RowHeaderCells")]
	public static extern QAccessibleInterface*[] QAccessibleTableCellInterface_RowHeaderCells(Self* c_this);
	[LinkName("QAccessibleTableCellInterface_ColumnIndex")]
	public static extern int32 QAccessibleTableCellInterface_ColumnIndex(Self* c_this);
	[LinkName("QAccessibleTableCellInterface_RowIndex")]
	public static extern int32 QAccessibleTableCellInterface_RowIndex(Self* c_this);
	[LinkName("QAccessibleTableCellInterface_ColumnExtent")]
	public static extern int32 QAccessibleTableCellInterface_ColumnExtent(Self* c_this);
	[LinkName("QAccessibleTableCellInterface_RowExtent")]
	public static extern int32 QAccessibleTableCellInterface_RowExtent(Self* c_this);
	[LinkName("QAccessibleTableCellInterface_Table")]
	public static extern QAccessibleInterface* QAccessibleTableCellInterface_Table(Self* c_this);
	[LinkName("QAccessibleTableCellInterface_OperatorAssign")]
	public static extern void QAccessibleTableCellInterface_OperatorAssign(Self* c_this, QAccessibleTableCellInterface* param1);
}
